# actionengine

./: AUTHORS  README.md  pyproject.toml
build_py/: __init__.py
examples/000-actions/: main.cc
examples/001-bidi-actions/: bidi_actions.cc
examples/005-echo-server/: main.cc
examples/007-python-generative-media/: memory_client.py  server.py
examples/007-python-generative-media/actions/: __init__.py  echo.py  gemini.py  http_utils.py  memory.py  redis.py  text_to_image.py
py/actionengine/: __init__.py  actions.py  async_node.py  data.py  logging.py  utils.py
py/actionengine/sdk/: __init__.py  interaction.py  llm_tool.py  llm_tool_runner.py  rehydrate_interaction.py
py/actionengine/sdk/anthropic/: __init__.py  client.py  generate_content_claude.py  generate_content_claude_handler.py
py/actionengine/sdk/google/: __init__.py  client.py  generate_content_gemini.py  generate_content_gemini_handler.py
py/actionengine/sdk/llm/: __init__.py  generate_content.py  generate_content_handler.py
py/actionengine/sdk/ollama/: __init__.py  generate_content_ollama.py  generate_content_ollama_handler.py
py_tests/: test_action_basics.py  test_webrtc_stream.py
src/: CMakeLists.txt
src/actionengine/: actionengine_pybind11.cc
src/actionengine/actions/: CMakeLists.txt  action.cc  action.h  actions_pybind11.cc  actions_pybind11.h  registry.cc  registry.h  schema.cc  schema.h
src/actionengine/concurrency/: concurrency.cc  concurrency.h
src/actionengine/data/: conversion.h  data_pybind11.cc  data_pybind11.h  mimetypes.h  msgpack.cc  serialization.cc  serialization.h  types.cc  types.h
src/actionengine/distributed/: consistent_hash.cc  consistent_hash.h  groupcache.cc  groupcache.h  lru.h  peers.cc  peers.h  singleflight.h  sinks.cc  sinks.h  test_consistent_hash.cc  test_groupcache.cc  test_lru.cc  test_singleflight.cc
src/actionengine/msgpack/: array.h  core_helpers.h  float.h  int.h  misc.h  msgpack.cc  msgpack.h  strbin.cc  strbin.h
src/actionengine/net/: CMakeLists.txt  stream.cc  stream.h
src/actionengine/net/http/proxygen/: ws_client_stream.h
src/actionengine/net/webrtc/: CMakeLists.txt  server.cc  server.h  signalling_client.cc  signalling_client.h  webrtc_pybind11.cc  webrtc_pybind11.h  wire_stream.cc  wire_stream.h
src/actionengine/net/websockets/: CMakeLists.txt  fiber_aware_websocket_stream.cc  fiber_aware_websocket_stream.h  server.cc  server.h  websockets_pybind11.cc  websockets_pybind11.h  wire_stream.cc  wire_stream.h
src/actionengine/nodes/: async_node.cc  async_node.h  node_map.cc  node_map.h  nodes_pybind11.cc  nodes_pybind11.h
src/actionengine/proto/: converters.cc  converters.h
src/actionengine/redis/: chunk_store.cc  chunk_store.h  chunk_store_pybind11.cc  chunk_store_pybind11.h  pubsub.cc  pubsub.h  redis.cc  redis.h  reply.cc  reply.h  reply_converters.cc  reply_converters.h  reply_parsers.cc  reply_parsers.h  streams.cc  streams.h
src/actionengine/redis/chunk_store_ops/: close_writes.lua.h  pop.lua.h  put.lua.h
src/actionengine/service/: service.cc  service.h  service_pybind11.cc  service_pybind11.h  session.cc  session.h
src/actionengine/stores/: byte_chunking.cc  byte_chunking.h  chunk_store.cc  chunk_store.h  chunk_store_pybind11.cc  chunk_store_pybind11.h  chunk_store_reader.cc  chunk_store_reader.h  chunk_store_writer.cc  chunk_store_writer.h  local_chunk_store.cc  local_chunk_store.h  test_chunk_store.cc
src/actionengine/util/: CMakeLists.txt  boost_asio_utils.cc  boost_asio_utils.h  boost_json.cc  boost_json.h  global_settings.cc  global_settings.h  global_settings_pybind11.cc  global_settings_pybind11.h  map_util.h  metrics.h  random.h  status_builder.cc  utils_pybind11.cc  utils_pybind11.h
src/pybind11_abseil_status_module/: status.cc
src/thread/thread/: boost_primitives.cc  boost_primitives.h  cases.h  channel.h  concurrency.h  fiber.cc  fiber.h  select.cc  select.h  selectables.cc  selectables.h  thread_pool.cc  thread_pool.h  util.cc  util.h
src/thread/thread/channel/: waiter_state.cc  waiter_state.h
web/: Dockerfile
web/app/: page.tsx
web/app/bidi-blobs/: page.tsx
web/app/deepresearch/: page.tsx
web/app/echo/: page.tsx
web/app/gemini/: page.tsx
web/src/actions/: chat.ts
web/src/components/canvas/: Genmedia.tsx
web/src/helpers/: demoChats.ts
