[project]
name = "action-engine"
version = "0.4.1"

authors = [{ name = "Helena Pankov", email = "helenapankov@actionengine.dev" }]
description = "API and UI SDK for sleek applications with agentic, generative, streaming capabilities"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

dependencies = [
    "absl-py>=2.2.2",
    "numpy>=2,<2.3.0",
    "ormsgpack",
    "Pillow",
    "pydantic",
    "pybind11>=2.13.6",
]

[project.scripts]
actionengine = "actionengine.cli.main:sync_main"

[build-system]
requires = [
    "wheel",
    "build",
    "cmake==3.31.6",
    #    "ninja",
    "setuptools",
    "ormsgpack",
    "numpy>=2,<2.3.0",
    #    "pybind11>=2.13.6",
    "pybind11-stubgen>=2.5.5",
    "Pillow",
    "pydantic",
]
build-backend = "build_py"
backend-path = ["./"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["py"]
include = ["actionengine", "actionengine.proto"]

[tool.setuptools.package-data]
actionengine = ["*.so", "_C/*.pyi"]

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
profile = "black"
